--- a/Web4/BlendedAPI/Styles/style.less
+++ b/Web4/BlendedAPI/Styles/style.less
@@ -1,434 +1,3 @@
-﻿@import "../../bs3/less/mixins/alerts.less";
-@import "../../bs3/less/mixins/gradients.less";
-@import "../../bs3/less/mixins/background-variant.less";
-@import "../../bs3/less/mixins/border-radius.less";
-@import "../../bs3/less/mixins/buttons.less";
-@import "../../bs3/less/variables.less";
-
-
-.bl {
-
-  @oli-red: #ff6022;
-
-  .container-fluid {
-    padding: 0;
-  }
-
-  .breadcrumb {
-    margin-bottom: 0;
-  }
-
-  .nav-pills > li > a {
-    border-bottom-left-radius: 0;
-    border-bottom-right-radius: 0;
-  }
-
-  .panel-heading {
-    h3 {
-      margin: 10px 0;
-    }
-  }
-
-  .lm-top-margin {
-    margin-top: 20px;
-  }
-
-  .lm-bottom-margin {
-    margin-bottom: 20px;
-  }
-
-  .lm-bottom-margin-lg {
-    margin-bottom: 30px;
-  }
-
-
-  .lm-top-margin-lg {
-    margin-top: 40px;
-  }
-
-  .more {
-    position: absolute;
-    cursor: pointer;
-  }
-
-  .topbar {
-    background-color: black;
-    height: 50px;
-    position: relative;
-
-    .lm-logo-black-small {
-      float: left;
-      background: url(img/lm-logo-black.png) no-repeat;
-      margin-top: 10px;
-      margin-left: 0;
-      margin-right: 20px;
-      width: 41px;
-      height: 32px;
-      cursor: pointer;
-    }
-
-    .topbar-include {
-      float: left;
-    }
-
-    .btn {
-      margin-top: 2px;
-    }
-
-    .topbar-title {
-      float: left;
-      margin-left: 10px;
-      color: lightgray;
-      font-size: @font-size-h3;
-      margin-top: 8px;
-    }
-
-    .onbehav-go-back {
-      float: left;
-      margin-right: 10px;
-      cursor: pointer;
-
-      .fa {
-        font-size: 50px;
-        color: white;
-      }
-    }
-
-    .onbehav-right-part-name {
-      float: right;
-      font-size: 16px;
-      font-weight: bold;
-      color: lightgoldenrodyellow;
-      margin-right: 10px;
-      padding-top: 8px;
-      line-height: 18px;
-    }
-
-    .onbehav-right-part-at {
-      float: right;
-      font-size: 36px;
-      color: lightgoldenrodyellow;
-      margin-right: 15px;
-    }
-  }
-  /*.navbar-center {
-    //display: table !important;
-    height: 50px;
-
-    .lm-logo-black-small {
-      float: left;
-      background: url(img/lm-logo-black.png) no-repeat;
-      margin-top: 10px;
-      margin-left: 0;
-      width: 41px;
-      height: 32px;
-    }
-
-    .content {
-      display: table-cell;
-      vertical-align: middle;
-
-      &.lm-logo {
-        padding-right: 20px;
-        border-right: 1px solid lightgray;
-
-        > a {
-          display: block;
-          background: url(img/lm-logo.png) no-repeat;
-          width: 195px;
-          height: 41px;
-        }
-      }
-
-      &.slogan {
-        padding-top: 5px;
-        color: lightgray;
-        font-size: 14px;
-        font-weight: bold;
-      }
-
-      &.contact {
-        font-size: 14px;
-        font-weight: bold;
-      }
-    }
-  }*/
-  .wizzard {
-    font-size: 110%;
-
-    .fa {
-      color: lightgray;
-      padding: 0 10px;
-    }
-
-    .wizzard-item {
-      display: inline;
-      padding: .2em .6em .3em;
-      line-height: 1;
-      text-align: center;
-      white-space: nowrap;
-      vertical-align: baseline;
-      border: 1px solid lightgray;
-      border-radius: .25em;
-      color: lightgray;
-
-      &.done, &.active {
-        color: #fff;
-        .bg-variant(@brand-primary);
-      }
-
-      &.future {
-      }
-    }
-  }
-
-  h3 .flag-small {
-    height: 22px;
-  }
-
-  .lm-tabs {
-    a:focus {
-      outline: none;
-    }
-
-    li.active * {
-      background-color: @panel-primary-heading-bg !important;
-      color: @panel-primary-text !important;
-    }
-  }
-
-  .study-plan {
-    > li {
-      position: relative;
-      padding-left: 50px;
-      padding-right: 120px;
-
-      h4 {
-        margin-top: 0px;
-      }
-
-      .left-mark, .right-mark {
-        position: absolute;
-        top: 5px;
-      }
-
-      .left-mark {
-        left: 10px;
-        top: 8px;
-        font-size: 24px;
-        /*border: solid 1px lightgray;
-        border-radius: 15px;*/
-        width: 38px;
-        text-align: center;
-      }
-
-      .right-mark {
-        width: 110px;
-        right: 0px;
-      }
-    }
-  }
-  //VYHODIT
-  .module-map-items {
-    margin-top: 10px;
-    margin-left: 1px;
-  }
-
-  .module-map-item {
-    margin-left: -1px !important;
-    border-radius: 0 !important;
-    width: 34px;
-    padding-left: 0;
-    padding-right: 0;
-    color: @link-color;
-    text-decoration: underline;
-
-    &.done {
-      .button-variant(@btn-success-color; @btn-success-bg; @btn-success-border);
-    }
-
-    &.active {
-      .button-variant(@btn-warning-color; @btn-warning-bg; @btn-warning-border);
-    }
-  }
-
-  .ex-module {
-    background-color: @panel-default-heading-bg;
-
-    .header {
-      //border: 1px solid @panel-default-border;
-      //border-radius: @alert-border-radius;
-      position: relative;
-
-      .more {
-        top: 7px;
-        right: 10px;
-        font-size: 20px;
-      }
-
-      padding-right: 30px;
-    }
-
-    &.expanded .header {
-      //.border-bottom-radius(0);
-      border-bottom: 0;
-    }
-
-    .body {
-      //border: 1px solid @panel-default-border;
-      //border-radius: @alert-border-radius;
-      //border-top: 0;
-      //.border-top-radius(0);
-      padding: 0 10px;
-      padding-bottom: 10px;
-
-      h4 {
-        margin-top: 10px;
-      }
-    }
-
-    .ex-item {
-      display: inline-block;
-      position: relative;
-      width: 36px;
-      height: 36px;
-      font-size: 12px;
-      border: solid 1px transparent; // @panel-default-border;
-      cursor: pointer;
-      line-height: 36px;
-      text-align: center;
-
-      &.success {
-        background-color: @btn-success-bg;
-        border-color: @btn-success-border;
-        color: white;
-      }
-
-      &.warning {
-        background-color: @btn-warning-bg;
-        border-color: @btn-warning-border;
-        color: white;
-      }
-
-      .progress-red {
-        position: absolute;
-        background-color: @oli-red;
-        left: 0;
-        right: 0;
-        top: 0;
-      }
-    }
-
-    .no-clickable.ex-item {
-      cursor: default;
-    }
-  }
-
-  .instruction {
-    /*background-color: @alert-success-bg;
-    border: 1px solid @alert-success-border;*/
-    background-color: @panel-default-heading-bg;
-    border: 1px solid @panel-default-border;
-    border-radius: @alert-border-radius;
-    padding-left: 15px;
-
-    .header {
-      position: relative;
-      cursor: pointer;
-
-      &.header-done {
-        height: 34px;
-      }
-
-      .reset-btn {
-        margin: 2px 0;
-        position: absolute;
-        right: 3px;
-      }
-
-      .more {
-        top: 1px;
-        right: 10px;
-        font-size: 20px;
-      }
-    }
-
-    .body {
-      //color: @alert-success-text;
-      padding-top: 10px;
-
-      h1 {
-        font-size: 16px;
-        font-weight: bold;
-        margin-top: 5px;
-        margin-bottom: 5px;
-      }
-
-      .btn-link {
-        text-align: left;
-        text-decoration: none;
-        white-space: normal;
-        font-weight: bold;
-        font-size: 16px;
-      }
-
-      ol {
-        margin: 0 0 10px 25px;
-      }
-    }
-  }
-
-  .score-bar {
-    display: inline-block;
-    position: relative;
-    background-color: @btn-success-bg;
-    width: 50px;
-    height: 20px;
-    vertical-align: top;
-
-    .progress-red {
-      position: absolute;
-      background-color: @oli-red;
-      right: 0;
-      top: 0;
-      bottom: 0;
-      z-index: 2;
-    }
-
-    .score-text {
-      position: absolute;
-      text-align: center;
-      color: white;
-      right: 0;
-      font-size: 14px;
-      line-height: 20px;
-      top: 0;
-      left: 0;
-      bottom: 0;
-      z-index: 20;
-    }
-  }
-
-  .lm-tabs-header {
-    margin-top: -1px;
-    background-color: @panel-primary-heading-bg;
-    color: @panel-primary-text !important;
-
-    h3 {
-      margin-top: 0px;
-      padding: 16px;
-    }
-  }
-
-  .home-course {
-    .panel-heading {
-      position: relative;
-
-      .more {
-        top: 24px;
-        right: 18px;
-        font-size: 24px;
-      }
-    }
-  }
-}
+﻿@import "other.less";
+@import "topbar.less";
+@import "exercise.less";
